[FIX] project_todo: show table ui elements
Commit that introduced the issue: https://github.com/odoo/odoo/commit/c98c58301da82ad896e296b9bbbdf6bbb0bc2a8e

Issue:
======
The row and column table ui elements doesn't show correctly.

Steps to reproduce the issue:
=============================
- Go to to-do
- add a table on top the editable
- Hover on the top left cell
- The row and col ui boxes doesn't show correctl

Origin of the issue:
====================
Since we forced the mentioned commit that `overflow-x` should be hidden,
then the ui elements which overflows the visible area of the html field
will be hdden too that's why only a small part of them appear.

Solution:
=========
To conserve the same ui and not add extra padding , we add padding to
the `note-editable` to make it possible to display the ui elements fully
(needs 16px) and decrease the padding of the padding of the formView
sheet.

task-3861784

X-original-commit: 0b45d08359eda947205c978def044faa06f55659

--- a/addons/project_todo/static/src/scss/todo.scss
+++ b/addons/project_todo/static/src/scss/todo.scss
@@ -39,7 +39,14 @@
         .o_field_html .note-editable {
             border: none !important;
             min-height: 300px;
+            padding: 16px 40px 4px 16px
         }
+    }
+
+    .o_form_sheet {
+        --formView-sheet-padding-y: 4px;
+        --formView-sheet-padding-x: 4px;
+        padding-right: 16px !important;
     }
 
     &.o_form_readonly {
